--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "lucide-react": "^0.554.0",
     "react-dom": "^19.2.0",
     "framer-motion": "^12.23.24",
-    "firebase": "^12.6.0"
+    "@supabase/supabase-js": "^2.38.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
